fix(CommonsBook): Fix spacing around ADAPT button

--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -236,6 +236,10 @@ body {
     margin-top: 1rem !important;
 }
 
+.mt-2e {
+  margin-top: 2em !important;
+}
+
 .mt-2p {
     margin-top: 2% !important;
 }
